# advent-of-code-2020

./: .gitignore  .pre-commit-config.yaml  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day1.py  day10.py  day11.py  day12.py  day13.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  precommit.sh  pyproject.toml  template.py  utils.py
