[tool.poetry]
name = "advent-of-code-2020"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
sympy = "^1.7.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.7.1"
pytest = "^5.4"
mypy = ">=0.790"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.coverage.run]
relative_files = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
known_first_party = ["server"]
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY" , "LOCALFOLDER"]

[mypy]
python_version = 3.9
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
